Add facebook meta tags

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+        <title>Goldthorn boilerplate</title>
+        <meta name="description" content="">
+        <meta name="author" content="Thornberry Pie">
+        <meta name="description" content="Portfolio of Auckland Web Developer Graeme Thornber: Front-end expert and PHP CMS specialist." />
+        <meta property="og:title" content="Goldthorn boilerplate" />
+        <meta property="og:type" content="article" />
+        <meta property="og:image" content="//graemethornber.com/images/gt-gat.jpg" />
+        <meta property="og:url" content="//graemethornber.com" />
+        <meta property="og:description" content="New site setup with jQuery, SASS and Gulp" />
+       
 
         <link rel="stylesheet" media="all" href="dist/index.min.css">
         <link rel="stylesheet" media="print" href="css/print.css">
